D       CAT.win32/CAT_FractalDimension.exe
D       CAT.win32/CAT_Isometize.exe
D       CAT.win32/CAT_LBConformalMap.exe
D       CAT.win32/CAT_ResampleSphericalSurf.exe
D       CAT.win32/CAT_ResampleSurf.exe
D       CAT.win32/CAT_SeparatePolygon.exe
D       CAT.win32/CAT_Surf2Sphere.exe
D       CAT.win32/CAT_WarpSurf.exe
M       CHANGES.txt
M       cg_vbm_update.m
M       vbm12.man

(1) Corrected wrong url in update function.
(2) Removed CAT binaries because of the annoying issues.
------------------------------------------------------------------------
r538 | gaser | 2013-12-10 09:26:48

M       CHANGES.txt

(1) Corrected wrong url in update function.
(2) Removed CAT binaries because of the annoying issues.
------------------------------------------------------------------------
r539 | gaser | 2013-12-10 09:28:03

M       CHANGES.txt
M       cg_vbm_tools.m
M       cg_vbm_update.m
M       sanlm_float.c
M       spm_vbm12.m
A       vbm_surf_parameters.m
A       vbm_surf_resamp.m

Added surface functions for parameter extraction and resampling.
------------------------------------------------------------------------
r540 | gaser | 2013-12-10 16:41:41

M       CHANGES.txt
M       cg_vbm_batch.m
M       cg_vbm_batch.sh
A       distribute_to_server.sh
M       vbm12.man

(1) Made some small changes to batch mode.
(2) Added new script distribute_to_server.sh that allows to distribute jobs
    to other server machines. Furthermore all files in a folder can be processed
    by excluding those file wehre a prepending pattern can be found 
    (e.g. m0wrp1),
------------------------------------------------------------------------
r541 | gaser | 2013-12-11 14:31:26

M       CHANGES.txt
M       Makefile.vbm
M       distribute_to_server.sh
MM      vbm_surf_parameters.m
MM      vbm_surf_resamp.m

Some small changes in distribute_to_server.sh.
------------------------------------------------------------------------
r542 | gaser | 2013-12-11 14:49:37